--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Práctica git 2</title>
 </head>
 <body>
+    <header>
+        <img class="col-3" src="" alt="">
+        <h1 class="col-6">Soy un título</h1>
+        <img class="col-1" src="" alt="">
+        <img class="col-1" src="" alt="">
+        <img class="col-1" src="" alt="">
+    </header>
     
 </body>
 </html>
