added container fluid class to header tag

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Práctica git 2</title>
 </head>
 <body>
-    <header>
+    <header class="container-fluid">
         <img class="col-3" src="" alt="">
         <h1 class="col-6">Soy un título</h1>
         <img class="col-1" src="" alt="">
