added bg-primary class to header tag and text-warning class to h1 class

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Práctica git 2</title>
 </head>
 <body>
-    <header class="container-fluid">
+    <header class="container-fluid bg-primary h-150px">
         <img class="col-3" src="" alt="">
-        <h1 class="col-6">Soy un título</h1>
+        <h1 class="col-6 text-warning">Soy un título</h1>
         <img class="col-1" src="" alt="">
         <img class="col-1" src="" alt="">
         <img class="col-1" src="" alt="">
