--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Práctica git 2</title>
 </head>
 <body>
-    <header class="container-fluid bg-primary h-150px">
-        <img class="col-3" src="" alt="">
+    <header class="container-fluid bg-primary row">
+        <img class="col-3" src="img/shop-barista.png" alt="logo">
         <h1 class="col-6 text-warning">Soy un título</h1>
         <img class="col-1" src="" alt="">
         <img class="col-1" src="" alt="">
